# slopsmith-desktop

./: .build-config.json  .gitignore  CMakeLists.txt  README.md  package.json
.github/workflows/: build.yml
.packages/: brew.txt  python.txt
cmake/: onnxruntime.cmake
docs/: SANDBOX-DESIGN.md
scripts/: VST_TRACE_README.md  build-audio.sh  build-common.sh  build-linux-ubuntu.sh  build-macos.sh  build-windows.sh  bundle-binaries.sh  bundle-python.sh  bundle-slopsmith.sh  bundle.sh  setup-dev.sh  vst-trace.patch
scripts/dev/: load-gr6.js
src/audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ChordScorer.cpp  ChordScorer.h  MlNoteDetector.cpp  MlNoteDetector.h  NodeAddon.cpp  PitchDetector.cpp  SignalChain.cpp  SignalChain.h  VSTHost.cpp  VSTTrace.h
src/audio/Sandbox/: AudioChannel.cpp  AudioChannel.h  ControlChannel.cpp  ControlChannel.h  Protocol.h  SandboxFactory_win.cpp  SandboxedProcessor.cpp  SandboxedProcessor.h  SubprocessHandle.cpp
src/main/: audio-bridge.ts  debug-log.ts  main.ts  plugin-manager.ts  preload.ts  python.ts  soundfont-manager.ts  splash-preload.ts  vst-crash-guard.ts
src/renderer/: plugin.json  screen.html  screen.js  settings.html
src/vst-host/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/mlnotedetector/: CMakeLists.txt  bench.cpp
tests/sandbox/: CMakeLists.txt  audio_channel_midi_test.cpp
tests/spike/: main.cpp
